--- a/frontend/usuarios.html
+++ b/frontend/usuarios.html
@@ -1,225 +1,225 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>PRONTIO – Usuários</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>PRONTIO - Usuários</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/components/modals.css">
-  <link rel="stylesheet" href="assets/css/components/topbar.css">
-  <link rel="stylesheet" href="assets/css/pages/page-usuarios.css">
-</head>
+    <!-- CSS base do sistema -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- CSS da página -->
+    <link rel="stylesheet" href="assets/css/pages/page-usuarios.css" />
+  </head>
 
-<body
-  data-theme="light"
-  data-page-id="usuarios"
-  data-subtitle="Gerencie os usuários do PRONTIO"
-  data-tag="Usuários"
-  data-context="Sistema"
->
-  <div class="app-shell">
-    <aside id="sidebar" class="sidebar" data-component="sidebar">
-      <div class="sidebar-header">
-        <button
-          type="button"
-          class="icon-button js-toggle-compact"
-          aria-label="Alternar modo compacto da barra lateral"
-          aria-pressed="false">
-          <svg viewBox="0 0 24 24" aria-hidden="true" class="icon-svg">
-            <path d="M4 5h16v2H4V5zm0 6h10v2H4v-2zm0 6h16v2H4v-2z" fill="currentColor" />
-          </svg>
-        </button>
+  <body data-page-id="usuarios" data-page="usuarios">
+    <!-- Layout padrão -->
+    <div class="app-shell">
+      <!-- Sidebar (se você já carrega via sidebar-loader.js, ele vai preencher) -->
+      <aside id="appSidebar" class="sidebar"></aside>
 
-        <div class="app-brand">
-          <div class="app-logo">PRONTIO</div>
-          <div class="app-version" id="appVersion">v1.0.3 - Dr. Marco Antônio Comper</div>
-        </div>
-      </div>
+      <main class="app-main">
+        <!-- Topbar (se você já carrega via widget/topbar, ele vai preencher) -->
+        <header id="appTopbar" class="topbar">
+          <div class="topbar-left">
+            <h1 class="page-title">Usuários</h1>
+          </div>
+          <div class="topbar-right">
+            <span id="sidebarUser" class="user-label"></span>
+            <a href="#" data-nav-action="logout" class="btn btn-secondary btn-sm">Sair</a>
+          </div>
+        </header>
 
-      <nav class="sidebar-nav" id="sidebarNav" aria-label="Navegação principal">
-        <a href="index.html" class="nav-link" data-page-id="index">
-          <span class="icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M4 10.5L12 4l8 6.5V20a1 1 0 0 0-1 1h-5v-6H10v6H5a1 1 0 0 0-1-1v-9.5z" fill="currentColor" />
-            </svg>
-          </span>
-          <span class="label">Início</span>
-        </a>
+        <section class="page-content">
+          <!-- Feedback -->
+          <div id="usuariosMsg" class="mensagem is-hidden"></div>
 
-        <a href="agenda.html" class="nav-link" data-page-id="agenda">
-          <span class="icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M7 2a1 1 0 0 0-1 1v1H5a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1V3a1 1 0 0 0-2 0v1H9V3A1 1 0 0 0 8 2zM5 9h14v9H5z" fill="currentColor" />
-            </svg>
-          </span>
-          <span class="label">Agenda</span>
-        </a>
+          <!-- Barra de ações -->
+          <div class="usuarios-toolbar">
+            <div class="usuarios-toolbar-left">
+              <div class="form-group form-inline">
+                <label for="usuariosBusca" class="sr-only">Buscar</label>
+                <input
+                  id="usuariosBusca"
+                  type="text"
+                  class="input"
+                  placeholder="Buscar por nome, login, e-mail, perfil..."
+                  autocomplete="off"
+                />
+              </div>
 
-        <a href="pacientes.html" class="nav-link" data-page-id="pacientes">
-          <span class="icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 12a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0 2c-4 0-7 2-7 4.5V20a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1.5C19 16 16 14 12 14z" fill="currentColor" />
-            </svg>
-          </span>
-          <span class="label">Pacientes</span>
-        </a>
-
-        <a href="prontuario.html" class="nav-link" data-page-id="prontuario" data-nav-section="prontuario">
-          <span class="icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M7 3a2 2 0 0 0-2 2v14a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V8.5L14.5 3zM14 4.5 18.5 9H14z" fill="currentColor" />
-            </svg>
-          </span>
-          <span class="label">Prontuário</span>
-        </a>
-      </nav>
-
-      <div class="sidebar-group" data-nav-group="sistema">
-        <div class="nav-label">Sistema</div>
-
-        <a href="configuracoes.html#perfil" class="nav-link nav-link-sub" data-page-id="perfil">
-          <span class="icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 12a4 4 0 1 0-4-4 4 4 0 0 0 4 4zm0 2c-3.5 0-6 1.7-6 4v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1v-1c0-2.3-2.5-4-6-4z" fill="currentColor" />
-            </svg>
-          </span>
-          <span class="label">Perfil</span>
-        </a>
-
-        <a href="javascript:void(0)" class="nav-link nav-link-sub" data-page-id="sistema-sobre" data-modal-open="modalSobreSistema">
-          <span class="icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M12 2a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2zm0 4a1.25 1.25 0 1 1-1.25 1.25A1.25 1.25 0 0 1 12 6zm2 11h-4v-1.5h1V11H10V9.5h3a1 1 0 0 1 1 1v5h1z" fill="currentColor" />
-            </svg>
-          </span>
-          <span class="label">Sobre</span>
-        </a>
-
-        <button type="button" class="nav-link nav-link-sub nav-link-action" data-nav-action="logout">
-          <span class="label">Sair</span>
-        </button>
-      </div>
-
-      <div class="sidebar-footer">
-        <small class="sidebar-user" id="sidebarUser"></small>
-        <span class="sidebar-year">
-          &copy; <span id="anoAtualSidebar"></span> PRONTIO
-        </span>
-      </div>
-    </aside>
-
-    <div class="sidebar-backdrop" data-sidebar-backdrop></div>
-
-    <main class="main-area">
-      <div id="topbarMount" data-partial="topbar"></div>
-
-      <section class="content content-usuarios">
-        <div id="mensagemUsuarios" class="mensagem is-hidden"></div>
-
-        <div class="card">
-          <div class="card-header card-header-tight">
-            <div>
-              <h2>Usuários cadastrados</h2>
-              <span class="card-subtitle">Gerencie os usuários do PRONTIO</span>
+              <div class="form-group form-inline">
+                <label for="usuariosFiltroAtivo" class="sr-only">Status</label>
+                <select id="usuariosFiltroAtivo" class="select">
+                  <option value="todos">Todos</option>
+                  <option value="ativos">Ativos</option>
+                  <option value="inativos">Inativos</option>
+                </select>
+              </div>
             </div>
-            <div>
-              <button class="btn btn-primary btn-sm" id="btnRecarregarUsuarios" type="button">
-                Atualizar lista
-              </button>
+
+            <div class="usuarios-toolbar-right">
+              <button id="btnRecarregar" class="btn btn-secondary">Recarregar</button>
+              <button id="btnNovoUsuario" class="btn btn-primary">Novo usuário</button>
             </div>
           </div>
 
-          <div class="card-body">
-            <div class="table-wrapper">
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr>
-                    <th>Nome</th>
-                    <th>Login</th>
-                    <th>Email</th>
-                    <th>Perfil</th>
-                    <th>Status</th>
-                    <th class="text-right">Ações</th>
-                  </tr>
-                </thead>
-                <tbody id="usuarios-tbody"></tbody>
-              </table>
+          <!-- Tabela -->
+          <div class="card">
+            <div class="card-content">
+              <div class="table-wrap">
+                <table class="table" id="usuariosTable">
+                  <thead>
+                    <tr>
+                      <th>Nome</th>
+                      <th>Login</th>
+                      <th>E-mail</th>
+                      <th>Perfil</th>
+                      <th>Status</th>
+                      <th class="col-actions">Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody id="usuariosTbody">
+                    <tr>
+                      <td colspan="6" class="text-muted">Carregando...</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="usuarios-footer">
+                <span id="usuariosCount" class="text-muted text-small"></span>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+
+    <!-- Modal: Criar/Editar -->
+    <div id="modalUsuario" class="modal is-hidden" role="dialog" aria-modal="true" aria-labelledby="modalUsuarioTitle">
+      <div class="modal-backdrop" data-modal-close="modalUsuario"></div>
+      <div class="modal-panel">
+        <div class="modal-header">
+          <h2 id="modalUsuarioTitle" class="modal-title">Novo usuário</h2>
+          <button class="modal-close" type="button" data-modal-close="modalUsuario" aria-label="Fechar">×</button>
+        </div>
+
+        <div class="modal-body">
+          <div id="modalUsuarioMsg" class="mensagem is-hidden"></div>
+
+          <input type="hidden" id="usuarioId" />
+
+          <div class="form-grid">
+            <div class="form-group">
+              <label for="usuarioNome">Nome completo</label>
+              <input id="usuarioNome" type="text" class="input" placeholder="Ex.: Dr. Marco Antônio Comper" />
+            </div>
+
+            <div class="form-group">
+              <label for="usuarioLogin">Login</label>
+              <input id="usuarioLogin" type="text" class="input" placeholder="Ex.: marco" autocomplete="off" />
+            </div>
+
+            <div class="form-group">
+              <label for="usuarioEmail">E-mail</label>
+              <input id="usuarioEmail" type="email" class="input" placeholder="Ex.: marco@exemplo.com" />
+            </div>
+
+            <div class="form-group">
+              <label for="usuarioPerfil">Perfil</label>
+              <select id="usuarioPerfil" class="select">
+                <option value="admin">admin</option>
+                <option value="medico">medico</option>
+                <option value="secretaria">secretaria</option>
+                <option value="profissional">profissional</option>
+                <option value="nutricionista">nutricionista</option>
+                <option value="recepcao">recepcao</option>
+              </select>
+              <div class="hint text-small text-muted">Você pode ajustar a lista de perfis conforme sua política.</div>
+            </div>
+
+            <div class="form-group">
+              <label for="usuarioAtivo">Ativo</label>
+              <select id="usuarioAtivo" class="select">
+                <option value="true">Sim</option>
+                <option value="false">Não</option>
+              </select>
+            </div>
+
+            <!-- Senha só é obrigatória ao criar -->
+            <div class="form-group">
+              <label for="usuarioSenha">Senha (apenas para novo usuário)</label>
+              <input id="usuarioSenha" type="password" class="input" placeholder="Defina a senha inicial" autocomplete="new-password" />
             </div>
           </div>
         </div>
 
-        <div class="card mt-3">
-          <div class="card-header card-header-tight">
-            <div>
-              <h2>Cadastrar novo usuário</h2>
-              <span class="card-subtitle">Crie credenciais de acesso ao sistema</span>
-            </div>
-          </div>
-
-          <div class="card-body">
-            <form id="formNovoUsuario" class="form">
-              <div class="form-row">
-                <div class="form-group">
-                  <label for="novoUsuarioNome">Nome completo</label>
-                  <input type="text" id="novoUsuarioNome" required />
-                </div>
-
-                <div class="form-group">
-                  <label for="novoUsuarioLogin">Login</label>
-                  <input type="text" id="novoUsuarioLogin" required />
-                </div>
-              </div>
-
-              <div class="form-row">
-                <div class="form-group">
-                  <label for="novoUsuarioEmail">E-mail (opcional)</label>
-                  <input type="email" id="novoUsuarioEmail" />
-                </div>
-
-                <div class="form-group">
-                  <label for="novoUsuarioPerfil">Perfil</label>
-                  <select id="novoUsuarioPerfil">
-                    <option value="admin">Administrador</option>
-                    <option value="secretaria">Secretaria</option>
-                  </select>
-                </div>
-              </div>
-
-              <div class="form-group mt-2">
-                <label for="novoUsuarioSenha">Senha</label>
-                <input type="password" id="novoUsuarioSenha" required />
-              </div>
-
-              <div class="form-actions mt-3">
-                <button type="submit" class="btn btn-success">Criar Usuário</button>
-              </div>
-            </form>
-          </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-modal-close="modalUsuario">Cancelar</button>
+          <button type="button" id="btnSalvarUsuario" class="btn btn-primary">Salvar</button>
         </div>
-
-      </section>
-    </main>
-  </div>
-
-  <div id="modalSobreSistema" class="modal-backdrop" role="dialog" aria-modal="true" aria-labelledby="modalSobreSistemaTitulo">
-    <div class="modal modal--lg">
-      <div class="modal-header">
-        <h2 class="modal-title" id="modalSobreSistemaTitulo">PRONTIO — Sobre o Sistema</h2>
-        <div class="modal-header-actions">
-          <button type="button" class="modal-close" aria-label="Fechar" data-modal-close="modalSobreSistema">✕</button>
-        </div>
-      </div>
-      <div class="modal-body">
-        <p><strong>PRONTIO — Sistema de Consultório Médico</strong><br>
-        Desenvolvido para uso pessoal do <strong>Dr. Marco Antônio Comper</strong>.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-modal-close="modalSobreSistema">Fechar</button>
       </div>
     </div>
-  </div>
 
-  <script src="assets/js/main.js"></script>
-</body>
+    <!-- Modal: Reset de senha (admin) -->
+    <div id="modalResetSenha" class="modal is-hidden" role="dialog" aria-modal="true" aria-labelledby="modalResetSenhaTitle">
+      <div class="modal-backdrop" data-modal-close="modalResetSenha"></div>
+      <div class="modal-panel">
+        <div class="modal-header">
+          <h2 id="modalResetSenhaTitle" class="modal-title">Resetar senha</h2>
+          <button class="modal-close" type="button" data-modal-close="modalResetSenha" aria-label="Fechar">×</button>
+        </div>
+
+        <div class="modal-body">
+          <div id="modalResetMsg" class="mensagem is-hidden"></div>
+
+          <input type="hidden" id="resetUserId" />
+
+          <p class="text-muted">
+            Usuário: <strong id="resetUserLabel">—</strong>
+          </p>
+
+          <div class="form-group">
+            <label for="resetNovaSenha">Nova senha</label>
+            <input id="resetNovaSenha" type="password" class="input" autocomplete="new-password" />
+          </div>
+
+          <div class="form-group">
+            <label class="checkbox">
+              <input id="resetAtivar" type="checkbox" checked />
+              Reativar usuário (Ativo = TRUE)
+            </label>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-modal-close="modalResetSenha">Cancelar</button>
+          <button type="button" id="btnConfirmarReset" class="btn btn-primary">Confirmar reset</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- CORE -->
+    <script src="assets/js/core/config.js"></script>
+    <script src="assets/js/core/dom.js"></script>
+    <script src="assets/js/core/utils.js"></script>
+    <script src="assets/js/core/state.js"></script>
+    <script src="assets/js/core/api.js"></script>
+    <script src="assets/js/core/auth.js"></script>
+    <script src="assets/js/core/guard.js"></script>
+    <script src="assets/js/core/app.js"></script>
+
+    <!-- UI -->
+    <script src="assets/js/ui/modals.js"></script>
+    <script src="assets/js/ui/messages.js"></script>
+    <script src="assets/js/ui/sidebar-loader.js"></script>
+
+    <!-- Widgets -->
+    <script src="assets/js/widgets/widget-toast.js"></script>
+
+    <!-- Página -->
+    <script src="assets/js/pages/page-usuarios.js"></script>
+
+    <!-- Main -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
