--- a/frontend/usuarios.html
+++ b/frontend/usuarios.html
@@ -198,28 +198,13 @@
       </div>
     </div>
 
-    <!-- CORE -->
+    <!-- CORE (mínimo necessário para o main.js) -->
     <script src="assets/js/core/config.js"></script>
-    <script src="assets/js/core/dom.js"></script>
-    <script src="assets/js/core/utils.js"></script>
-    <script src="assets/js/core/state.js"></script>
     <script src="assets/js/core/api.js"></script>
     <script src="assets/js/core/auth.js"></script>
-    <script src="assets/js/core/guard.js"></script>
-    <script src="assets/js/core/app.js"></script>
 
-    <!-- UI -->
-    <script src="assets/js/ui/modals.js"></script>
-    <script src="assets/js/ui/messages.js"></script>
-    <script src="assets/js/ui/sidebar-loader.js"></script>
-
-    <!-- Widgets -->
-    <script src="assets/js/widgets/widget-toast.js"></script>
-
-    <!-- Página -->
-    <script src="assets/js/pages/page-usuarios.js"></script>
-
-    <!-- Main -->
+    <!-- MAIN (bootstrap + guard + lazy-load pages/page-<id>.js) -->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
