--- a/frontend/atendimento.html
+++ b/frontend/atendimento.html
@@ -37,6 +37,7 @@
             </div>
 
             <div class="atendimento-actions">
+              <button id="btnChamarProximo" class="btn btn-secondary" type="button">Chamar próximo</button>
               <button id="btnAbrirProntuario" class="btn btn-primary" type="button" disabled>Abrir prontuário</button>
               <button id="btnRecarregarLista" class="btn btn-secondary" type="button">Recarregar lista</button>
             </div>
@@ -51,6 +52,7 @@
                   <th class="col-paciente">Paciente</th>
                   <th class="col-tipo">Tipo</th>
                   <th class="col-status">Status</th>
+                  <th class="col-acoes">Ações</th>
                 </tr>
               </thead>
               <tbody id="tabelaAtendimentoBody"></tbody>
@@ -58,7 +60,7 @@
           </div>
 
           <p class="atendimento-hint">
-            Dica: em breve você poderá marcar “Chegou”, “Em atendimento” e “Concluído” direto nesta fila.
+            Dica: agora você pode marcar “Chegou”, “Chamar”, “Iniciar”, “Concluir” e “Cancelar” direto nesta fila.
           </p>
         </section>
       </section>
