--- a/frontend/atendimento.html
+++ b/frontend/atendimento.html
@@ -5,10 +5,8 @@
   <title>PRONTIO - Atendimento</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- ✅ Ponto único de entrada: style.css (inclui componentes, pages e tema) -->
   <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/components/modals.css">
-  <link rel="stylesheet" href="assets/css/components/topbar.css">
-  <link rel="stylesheet" href="assets/css/pages/page-atendimento.css">
 </head>
 
 <body
@@ -84,6 +82,7 @@
     </div>
   </div>
 
+  <!-- ✅ Bootstrap único -->
   <script src="assets/js/main.js"></script>
 </body>
 </html>
